media/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      nodeSelector:
        stack.arr: "arr-1"
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: bazarr
          image: linuxserver/bazarr:latest
          ports:
            - containerPort: 6767
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /tv
              subPath: videos/shows
            - name: media
              mountPath: /movies
              subPath: videos/movies
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: bazarr-pvc
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
